--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                <textarea name="message"></textarea>
                <div class="popup__text">Ваше сообщение</div>
             </label>
-            <button class="menu__link" type="submit">Отправить</button>
+            <button class="popup__submit" type="submit">Отправить</button>
          </form>
       </div>
    </body>
